<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topcolor6"
        android:layout_width="406dp"
        android:layout_height="368dp"
        android:background="@drawable/background_top3"
        tools:layout_editor_absoluteX="-60dp"
        tools:layout_editor_absoluteY="314dp" />

    <View
        android:id="@+id/topcolor7"
        android:layout_width="409dp"
        android:layout_height="368dp"
        android:background="@drawable/background_top2"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="297dp" />

    <View
        android:id="@+id/topcolor8"
        android:layout_width="413dp"
        android:layout_height="368dp"
        android:background="@drawable/background_top4"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="271dp"

        />

    <View
        android:id="@+id/topcolor9"
        android:layout_width="416dp"
        android:layout_height="689dp"
        android:background="@drawable/background_top"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="-75dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bregister"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:background="@drawable/background_button_new"
        android:drawableEnd="@drawable/arrow3"
        android:paddingStart="20dp"
        android:text="Cadastrar"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="549dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="251dp"
        android:layout_height="175dp"
        android:padding="40dp"
        android:text="@string/expenses"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="104dp" />

    <ImageView
        android:id="@+id/dollar"
        android:layout_width="64dp"
        android:layout_height="85dp"
        app:srcCompat="@drawable/iconedin2"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="43dp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:text="Primeiros Passos"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="221dp" />

    <TextView
        android:id="@+id/greetings"
        android:layout_width="299dp"
        android:layout_height="52dp"
        android:text="@string/greetings"
        android:textColor="@color/white"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="279dp" />

    <TextView
        android:id="@+id/greetings2"
        android:layout_width="298dp"
        android:layout_height="73dp"
        android:text="@string/expenses2"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="345dp" />

    <TextView
        android:id="@+id/greetings3"
        android:layout_width="298dp"
        android:layout_height="73dp"
        android:text="@string/cost"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle=""
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="446dp" />


</androidx.constraintlayout.widget.ConstraintLayout>