<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fpsswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fpsswd"
        android:textColor="@color/blue"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="486dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/blogin"
        style="@style/gradiantBotton"
        android:layout_width="324dp"
        android:layout_height="61dp"
        android:drawableEnd="@drawable/arrow3"
        android:paddingStart="20dp"
        android:text="Login"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="560dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="298dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/blue"
        android:drawableRight="@drawable/eye"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="439dp" />

    <View
        android:id="@+id/topcolor3"
        android:layout_width="406dp"
        android:layout_height="368dp"
        android:background="@drawable/background_top3"
        tools:layout_editor_absoluteX="-76dp"
        tools:layout_editor_absoluteY="-74dp" />

    <View
        android:id="@+id/topcolor2"
        android:layout_width="409dp"
        android:layout_height="368dp"
        android:background="@drawable/background_top2"
        tools:layout_editor_absoluteX="-46dp"
        tools:layout_editor_absoluteY="-97dp" />

    <View
        android:id="@+id/topcolor4"
        android:layout_width="413dp"
        android:layout_height="368dp"
        android:background="@drawable/background_top4"
        tools:layout_editor_absoluteX="-120dp"
        tools:layout_editor_absoluteY="-113dp"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="251dp"
        android:layout_height="175dp"
        android:padding="40dp"
        android:text="@string/expenses"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="104dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="85dp"
        app:srcCompat="@drawable/iconedin2"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="43dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="302dp"

        android:layout_height="40dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="305dp" />


</androidx.constraintlayout.widget.ConstraintLayout>