<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstSteps">

    <View
        android:id="@+id/topcolor6"
        android:layout_width="406dp"
        android:layout_height="368dp"
        android:layout_marginStart="-200dp"
        android:background="@drawable/background_top3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <View
        android:id="@+id/topcolor7"
        android:layout_width="409dp"
        android:layout_height="368dp"
        android:layout_marginEnd="-200dp"
        android:background="@drawable/background_top2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <View
        android:id="@+id/topcolor8"
        android:layout_width="413dp"
        android:layout_height="368dp"
        android:layout_marginEnd="-200dp"

        android:background="@drawable/background_top4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <View
        android:id="@+id/topcolor9"
        android:layout_width="416dp"
        android:layout_height="689dp"
        android:layout_marginTop="-200dp"

        android:background="@drawable/background_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bregister"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:background="@drawable/background_button_new"
        android:drawableEnd="@drawable/arrow3"
        android:paddingStart="20dp"
        android:text="Cadastrar"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <TextView
        android:id="@+id/title"
        android:layout_width="251dp"
        android:layout_height="175dp"
        android:padding="40dp"
        android:text="@string/expenses"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <ImageView
        android:id="@+id/dollar"
        android:layout_width="64dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/iconedin2" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="Primeiros Passos"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/greetings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/greetings"
        android:layout_width="299dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="14dp"
        android:text="@string/greetings"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/greetings2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/greetings2"
        android:layout_width="298dp"
        android:layout_height="73dp"
        android:layout_marginBottom="43dp"
        android:text="@string/expenses2"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/greetings3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetings" />

    <TextView
        android:id="@+id/greetings3"
        android:layout_width="298dp"
        android:layout_height="73dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cost"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle=""
        app:layout_constraintBottom_toTopOf="@+id/bregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/greetings2" />


</androidx.constraintlayout.widget.ConstraintLayout>